k8s/workloads/base/ns-blue.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-blue
  labels:
    k8s.ovn.org/primary-user-defined-network: ""
