k8s/workloads/base/ns-green.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-green
  labels:
    k8s.ovn.org/primary-user-defined-network: ""
