k8s/workloads/base/ns-red.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-red
  labels:
    k8s.ovn.org/primary-user-defined-network: ""
