k8s/workloads/base/ns-yellow.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-yellow
  labels:
    k8s.ovn.org/primary-user-defined-network: ""
