k8s/workloads/base/nginx-red.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-red
  namespace: tenant-red
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
