k8s/workloads/base/nginx-yellow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-yellow
  namespace: tenant-yellow
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
