k8s/workloads/base/networkpolicy.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-pod-to-pod
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
